# Staff-Allocation

./: .gitignore  Automated-Job-Allocator.csv  CMakeLists.txt  README.md  Staff-Allocation.cpp  build.ps1  build.sh  main.cpp
src/: AuxiliaryHelper.cpp  AuxiliaryHelper.h  StaffAllocation.cpp  StaffAllocation.h
